# python-yaml-ld

./: .gitignore  .gitmodules  404.html  README.md  index.html  jeeves.py  main.py  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml
.github/workflows/: deploy.yml  master.yaml  test.yaml
blog/: index.html
blog/any-ld/: index.html
blog/diff-test-results/: index.html
blog/document-pydantic-models/: index.html
blog/parallelize-test-branches/: index.html
blog/write-options-manually/: index.html
blog/yaml-library/: index.html
blog/yarl/: index.html
cli/: index.html
cli/compact/: index.html
cli/expand/: index.html
cli/flatten/: index.html
cli/frame/: index.html
cli/from-rdf/: index.html
cli/get/: index.html
cli/to-rdf/: index.html
compact/: index.html
compact/options/: index.html
docs/: .pages  cli.md  compact.md  expand.md  frame.md  index.md  load-document.md  to-rdf.md
docs/blog/: any-ld.md  diff-test-results.md  document-pydantic-models.md  index.md  parallelize-test-branches.md  urlpath.md  write-options-manually.md  yaml-library.md  yarl.md
docs/cli/: .pages  compact.md  expand.md  flatten.md  frame.md  from-rdf.md  get.md  index.md  to-rdf.md
docs/compact/: index.md  options.md
docs/examples/: compact.py  expand.py  flatten.py  get_local_file.py  pythagorean-theorem.yamlld  to_rdf.py
docs/expand/: index.md  options.md
docs/flatten/: index.md  options.md
docs/frame/: embed.md  index.md  options.md
docs/from-rdf/: index.md  options.md
docs/to-rdf/: index.md  options.md
docs/types/: document-loader-options.md  document.md  json-ld-context.md  json-ld-input.md  json-ld-record.md  path.md  processing-mode.md  remote-document.md  serialized-document.md  uri.md  url.md
examples/: compact.py  ctx.jsonld  expand.py  flatten.py  get_local_file.py  pythagorean-theorem.yamlld  to_rdf.py
expand/: index.html
expand/options/: index.html
flatten/: index.html
flatten/options/: index.html
frame/: index.html
frame/embed/: index.html
frame/options/: index.html
from-rdf/: index.html
from-rdf/options/: index.html
ldtest/: __init__.py  facets.py  models.py  plugin.py
ldtest/data/: context.json  is-facet-of.yaml  subclasses.yaml  test.yaml
ldtest/sparql/: tests.sparql
load-document/: index.html
overrides/: main.html
overrides/partials/: actions.html
search/: search_index.json
tests/: common.py  conftest.py  errors.py  test_default_document_loader.py  test_expand.py  test_http_rdf_xml_loader.py  test_http_redirected_turtle_loader.py  test_https.py  test_markdown_ld.py  test_parse.py  test_parse_raw_link_header.py  test_specification.py
tests/data/: header.txt  test-markdown-empty-frontmatter.md  test-markdown-ld.md  test-markdown-no-frontmatter.md  tr016.yaml
to-rdf/: index.html
to-rdf/options/: index.html
types/document/: index.html
types/document-loader-options/: index.html
types/json-ld-context/: index.html
types/json-ld-input/: index.html
types/json-ld-record/: index.html
types/loaders/: index.html
types/processing-mode/: index.html
types/rdf/: index.html
types/remote-document/: index.html
types/serialized-document/: index.html
types/uri/: index.html
yaml_ld/: __init__.py  annotations.py  cli.py  compact.py  errors.py  expand.py  flatten.py  frame.py  from_rdf.py  load_document.py  load_html.py  loader.py  models.py  options.py  parse.py  rdf.py  string_as_url_or_path.py  to_rdf.py
yaml_ld/cli/: __init__.py  app.py
yaml_ld/document_loaders/: base.py  choice_by_scheme.py  content_types.py  default.py  http.py  local_file.py  mock.py
yaml_ld/document_parsers/: base.py  html_parser.py  json_parser.py  markdown_parser.py  rdf_xml_parser.py  turtle_parser.py  yaml_parser.py
(+36 files in other folders)
