[tool.poetry]
name = "python-yaml-ld"
version = "0.1.0"
description = "YAML-LD for Python"
authors = ["Anatoly Scherbakov <altaisoft@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
 { include = "yaml_ld" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
PyLD = "^2.0.3"
pydantic = "^2.3.0"
pyyaml = "^6.0.1"
beautifulsoup4 = "^4.12.2"


[tool.poetry.dev-dependencies]
jeeves-yeti-pyproject = { version = "^0.2.20", markers = "python_version >= '3.10'" }


[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12.11"
rdflib-pyld-compat = "^0.1.0"
lambdas = "^0.2.0"
dominate = "^2.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
