[tool.poetry]
name = "python-yaml-ld"
version = "0.1.0"
description = "YAML-LD for Python"
authors = ["Anatoly Scherbakov <altaisoft@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
 { include = "yaml_ld" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
PyLD = "^2.0.4"
pydantic = "^2.7.3"
pyyaml = "^6.0.1"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
jeeves-yeti-pyproject = { version = "^0.2.20", markers = "python_version >= '3.10'" }
types-pyyaml = "^6.0.12.11"
rdflib-pyld-compat = "^0.1.0"
lambdas = "^0.2.0"
dominate = "^2.9.1"
mkdocs-awesome-pages-plugin = "^2.9.2"
mkdocs-blogging-plugin = "^2.2.11"
mkdocstrings-python = "^1.10.3"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
